--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ html {
     display: flex;
     width: 100%;
     background: rgb(251, 48, 54);
-    padding: 2rem;
+    padding: 2rem 2rem 0;
     flex-wrap: wrap;
     justify-content: space-around;
 }
@@ -94,4 +94,8 @@ p {
 #baba {
     background: url(./assets/baba.gif) no-repeat;
     background-size: 100%;
+}
+
+.footer {
+    margin-top: 1rem;
 }
